yaml/appointment-service-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
      - name: appointment-service
        image: 183295407444.dkr.ecr.us-east-1.amazonaws.com/meditrack:appointment-service
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
  type: ClusterIP
