yaml/appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
  type: ClusterIP
