yaml/patient-service-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
      - name: patient-service
        image: 183295407444.dkr.ecr.us-east-1.amazonaws.com/meditrack:patient-service
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
